Refined the dialog pop up. The white background completely fills the screen and also scrolls correctly. I am satisfied with the way this looks. Now to ensure the scroll is completely functional on iOS Safari.

--- a/public/css/components.css
+++ b/public/css/components.css
@@ -22,8 +22,10 @@
 
 .dialog{
     position: relative;
-    background: rgb(255, 255, 255) none repeat scroll 0% 0%;
+    background: rgba(255, 255, 255, 1) none repeat scroll 0% 0%;
+    min-height: 100vh;
     width: 100%;
+    overflow: visible;
 
     z-index: 1;
 }
@@ -51,6 +53,7 @@
         left: 0px;
         top: 0px;
         right: 0px;
+        bottom: inherit;
         height: 100vh;
     
         display: flex;
@@ -66,6 +69,8 @@
         margin: 0px auto;
         margin-top: 50px;
         width: 676px;
+        min-height: inherit;
+        overflow: inherit;
     }
     
     .dialog-info-container{
